docs: document installer-based downloads and AppImage/Flatpak
Updates Windows (setup.exe, per-user) and Linux (.deb, AppImage, Flatpak)
instructions; drops the obsolete jar/JavaFX/run-as-root steps.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>